name:                pure-visibility
version:             0.8.0.0
homepage:            purehs.org/doc/pure-visibility
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-visibility.git

library
  exposed-modules:
      Pure.Visibility

  build-depends:
      base
    , pure
    , pure-cond
    , pure-prop

  hs-source-dirs:      src
  default-language:    Haskell2010

